# computational-geometry

./: .gitignore  CMakeLists.txt  LICENSE  package-lock.json  package.json
backend/: Dockerfile  README.md
backend/core/: CMakeLists.txt
backend/core/include/algorithms/: ConvexHull.h  convex_hull.h  distance.h  line_segment_intersection.h  sortPoint2D.h  sort_points_2d.h
backend/core/include/primitives/: Point2D.h  Polygon2D.h  Segment2D.h  predicates.h
backend/core/src/algorithms/: ConvexHull.cpp  convex_hull.cpp  distance.cpp  line_segment_intersection.cpp  sortPoint2D.cpp  sort_points_2d.cpp
backend/server/: CMakeLists.txt  main.cpp
core/include/algorithms/: distance.h
core/src/primitives/: Point2D.cpp  Segment2D.cpp
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  App.tsx  index.css  types.ts
frontend/src/api/: convexHull.ts  distance.ts  lineSegmentIntersection.ts
frontend/src/components/: Canvas.tsx  Layout.tsx  Sidebar.tsx
frontend/src/pages/convex-hull/: ConvexHullPage.tsx
frontend/src/pages/distance/: DistancePage.tsx
frontend/src/pages/line-segment-intersection/: LineSegementIntersectionPage.tsx
server/: CMakeLists.txt  main.cpp
